--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="es " translate="no">
+<html lang="es" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#c66900">
     <title>Proyecto PWA</title>
     <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="src/css/material.min.css">
-    <!--<link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">-->
-    <script defer src="src/js/material.min.js"></script>
-    <link rel="stylesheet" href="src/css/style.css">
+    <script src="src/js/material.min.js"></script>
+    <!--link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"-->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="manifest" href="manifest.webmanifest">
+    <script async src="http:///unpkg.com/pwacompat" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -19,39 +20,52 @@
         <header class="mdl-layout__header">
             <div class="mdl-layout__header-row">
                 <!-- Title -->
-                <span class="mdl-layout-title">
-                    <i class="material-icons">book</i> Block UTTC
-                </span>
+                <span class="mdl-layout-title">Blog UTTC</span>
                 <!-- Add spacer, to align navigation to the right -->
                 <div class="mdl-layout-spacer"></div>
                 <!-- Navigation. We hide it in small screens. -->
                 <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <i>home</i>
-                    <a class="mdl-navigation__link" href="">Ver Publicaciones</a>
-                    <a class="mdl-navigation__link" href="">Imagenes</a>
+                    <li>Home</li>
+                    <a class="mdl-navigation__link" href="">Ver publicaciones</a>
+                    <a class="mdl-navigation__link" href="">Imágenes</a>
                     <a class="mdl-navigation__link" href="">Videos</a>
                     <a class="mdl-navigation__link" href="">Audios</a>
                 </nav>
             </div>
         </header>
         <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Block UTTC</span>
+            <span class="mdl-layout-title">Blog UTTC</span>
             <nav class="mdl-navigation">
                 <a class="mdl-navigation__link mdl-color-text--primary" href="">
                     <i class="material-icons">home</i> Ir al inicio
                 </a>
                 <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">post_add</i> Ver Publicaciones
-                </a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">image</i> Imagenes
-                </a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">video_library</i> Videos
-                </a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">music_note</i> Audios
-                </a>
+                    <i class="material-icons">post_add</i>
+                    Ver publicaciones</a>
+                <a class="mdl-navigation__link mdl-color-text--primary" href=""> <i
+                        class="material-icons">photo_camera</i>
+                    Imágenes</a>
+                <a class="mdl-navigation__link mdl-color-text--primary" href=""> <i
+                        class="material-icons">video_library</i>
+                    Videos</a>
+                <a class="mdl-navigation__link mdl-color-text--primary" href=""> <i
+                        class="material-icons">audio_file</i>
+                    Audios</a>
+                    <div class="mdl-navigation__link app--install" id="banner-install">
+                        <div>
+                            Si te gustó la app puedes instalarla en tu dispositivo presionando en el 
+                            botón instalar
+                        </div>
+                        <div>
+                            <i class="material-icons">app_settings_alt</i>Instalar
+                        </div>
+                    </div>
+                    <div class="mdl-navigation__link notifications--install" id="notifications--install">
+                        <div>
+                            Desea activar notificaciones
+                        </div>
+                    <i class="material-icons">notificatin_important</i>Activar
+                    </div>
             </nav>
         </div>
         <main class="mdl-layout__content">
@@ -90,19 +104,20 @@
                             </div>
                         </div>
                     </div>
+                               
                 </div>
             </div>
-            <!--Boton add-->
+            <!--boton add-->
             <div class="floating-button">
                 <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" id="btn-upload-post">
                     <i class="material-icons">add</i>
                 </button>
             </div>
-            <!--End boton add-->
+            <!--end boton add-->
 
-            <!--Seccion para agregar un Post-->
-            <div class="card-wide mdl-shadow--2dp" id="modal-post-section">
-                <div class="mdl-carl__supporting-text">
+            <!--Sección para agregar un post-->
+            <div class="card-wide mdl-card mdl-shadow--2dp" id="modal-post-section">
+                <div class="mdl-card__supporting-text">
                     <form action="#">
                         <div class="mdl-grid">
                             <div
@@ -110,38 +125,35 @@
                                 <input class="mdl-textfield__input" type="text" id="title">
                                 <label class="mdl-textfield__label" for="title">Titulo</label>
                             </div>
+
                             <div
                                 class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <textarea class="mdl-textfield__input" type="text" rows="3" id="descripcion">
-
-                            </textarea>
+                                <textarea class="mdl-textfield__input" type="text" rows="3" id="descripcion"></textarea>
                                 <label class="mdl-textfield__label" for="descripcion">Descripcion</label>
                             </div>
-                            <div class="mdl-cell mdl-cell--12-col">
+
+                            <div class="mdl-grid mdl-cell mdl-cell--12-col">
                                 <div class="mdl-grid">
-                                    <div class="mdl-cell mdl-cell--5-col">
+                                    <div class="mdl-cell mdl-cell--6-col">
                                         <button type="button"
                                             class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--primary"
                                             id="btn-post-submit">
-                                            Enviar Post</button>
+                                            Enviar post
+                                        </button>
                                     </div>
-                                    <div class="mdl-cell mdl-cell--5-col">
+                                    <div class="mdl-cell mdl-cell--6-col">
                                         <button type="button"
                                             class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--error"
-                                            id="btn-post-cancel">
-                                            Cancelar
-                                          </button>
+                                            id="btn-post-cancel">Cancelar</button>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                    </form>
                 </div>
             </div>
-            </form>
-
-    </div>
-    <!--Termina Seccion para agregar un Post-->
-    </main>
+            <!--Termina sección para agregar un post-->
+        </main>
     </div>
     <script src="src/js/app.js"></script>
 </body>
