--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="es" translate="no">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="theme-color" content="#c66900">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#c66900" />
     <title>Proyecto PWA</title>
-    <link rel="stylesheet" href="src/css/style.css">
-    <link rel="stylesheet" href="src/css/material.min.css">
+    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="src/css/material.min.css" />
     <script src="src/js/material.min.js"></script>
     <!--link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link rel="manifest" href="manifest.webmanifest" />
     <script async src="http:///unpkg.com/pwacompat" crossorigin="anonymous"></script>
 </head>
 
@@ -42,30 +43,25 @@
                 <a class="mdl-navigation__link mdl-color-text--primary" href="">
                     <i class="material-icons">post_add</i>
                     Ver publicaciones</a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href=""> <i
-                        class="material-icons">photo_camera</i>
-                    Imágenes</a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href=""> <i
-                        class="material-icons">video_library</i>
-                    Videos</a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href=""> <i
-                        class="material-icons">audio_file</i>
-                    Audios</a>
-                    <div class="mdl-navigation__link app--install" id="banner-install">
-                        <div>
-                            Si te gustó la app puedes instalarla en tu dispositivo presionando en el 
-                            botón instalar
-                        </div>
-                        <div>
-                            <i class="material-icons">app_settings_alt</i>Instalar
-                        </div>
+                <a class="mdl-navigation__link mdl-color-text--primary" href="">
+                    <i class="material-icons">photo_camera</i> Imágenes</a>
+                <a class="mdl-navigation__link mdl-color-text--primary" href="">
+                    <i class="material-icons">video_library</i> Videos</a>
+                <a class="mdl-navigation__link mdl-color-text--primary" href="">
+                    <i class="material-icons">audio_file</i> Audios</a>
+                <div class="mdl-navigation__link app--install" id="banner-install">
+                    <div>
+                        Si te gustó la app puedes instalarla en tu dispositivo presionando
+                        en el botón instalar
                     </div>
-                    <div class="mdl-navigation__link notifications--install" id="notifications--install">
-                        <div>
-                            Desea activar notificaciones
-                        </div>
-                    <i class="material-icons">notificatin_important</i>Activar
+                    <div><i class="material-icons">app_settings_alt</i>Instalar</div>
+                </div>
+                <div class="mdl-navigation__link notifications--install" id="notifications--install">
+                    <div>¿Desea Activar las Notificaciones?</div>
+                    <div>
+                        <i class="material-icons">notification_important</i>Activar
                     </div>
+                </div>
             </nav>
         </div>
         <main class="mdl-layout__content">
@@ -84,27 +80,27 @@
                             <div class="page--initial">
                                 <i class="material-icons">emoji_objects</i>
                                 <div class="description">
-                                    Si no quieres olvidarte de una idea, mensaje, palabra, etc... publicala y hazlo
-                                    persistente.
+                                    Si no quieres olvidarte de una idea, mensaje, palabra,
+                                    etc... publicala y hazlo persistente.
                                 </div>
                             </div>
                             <div class="page--initial">
                                 <i class="material-icons">add_a_photo</i>
                                 <div class="description">
-                                    Si no quieres perder fotos que tomaste de lugares, personas y eventos que te
-                                    gustaron, publicala para que no se pierda.
+                                    Si no quieres perder fotos que tomaste de lugares, personas
+                                    y eventos que te gustaron, publicala para que no se pierda.
                                 </div>
                             </div>
                             <div class="page--initial">
                                 <i class="material-icons">ondemand_video</i>
                                 <div class="description">
-                                    Si no quieres escribir y solo deseas grabar un video o un audio, tambien puedes
-                                    hacerlo y volverlo un recuerdo para siempre.
+                                    Si no quieres escribir y solo deseas grabar un video o un
+                                    audio, tambien puedes hacerlo y volverlo un recuerdo para
+                                    siempre.
                                 </div>
                             </div>
                         </div>
                     </div>
-                               
                 </div>
             </div>
             <!--boton add-->
@@ -114,7 +110,10 @@
                 </button>
             </div>
             <!--end boton add-->
-
+            <!--Intalar la aplicacion-->
+            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--primary" id="btn-install-app">
+                Instalar aplicación
+            </button>
             <!--Sección para agregar un post-->
             <div class="card-wide mdl-card mdl-shadow--2dp" id="modal-post-section">
                 <div class="mdl-card__supporting-text">
@@ -122,7 +121,7 @@
                         <div class="mdl-grid">
                             <div
                                 class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" type="text" id="title">
+                                <input class="mdl-textfield__input" type="text" id="title" />
                                 <label class="mdl-textfield__label" for="title">Titulo</label>
                             </div>
 
@@ -144,7 +143,9 @@
                                     <div class="mdl-cell mdl-cell--6-col">
                                         <button type="button"
                                             class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--error"
-                                            id="btn-post-cancel">Cancelar</button>
+                                            id="btn-post-cancel">
+                                            Cancelar
+                                        </button>
                                     </div>
                                 </div>
                             </div>
