--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es" translate="no">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#c66900" />
@@ -10,153 +9,184 @@
     <link rel="stylesheet" href="src/css/material.min.css" />
     <script src="src/js/material.min.js"></script>
     <!--link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css"-->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link rel="manifest" href="manifest.webmanifest" />
-    <script async src="http:///unpkg.com/pwacompat" crossorigin="anonymous"></script>
-</head>
+    <script
+      async
+      src="http:///unpkg.com/pwacompat"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
+  <body>
     <!-- Always shows a header, even in smaller screens. -->
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
-        <header class="mdl-layout__header">
-            <div class="mdl-layout__header-row">
-                <!-- Title -->
-                <span class="mdl-layout-title">Blog UTTC</span>
-                <!-- Add spacer, to align navigation to the right -->
-                <div class="mdl-layout-spacer"></div>
-                <!-- Navigation. We hide it in small screens. -->
-                <nav class="mdl-navigation mdl-layout--large-screen-only">
-                    <li>Home</li>
-                    <a class="mdl-navigation__link" href="">Ver publicaciones</a>
-                    <a class="mdl-navigation__link" href="">Imágenes</a>
-                    <a class="mdl-navigation__link" href="">Videos</a>
-                    <a class="mdl-navigation__link" href="">Audios</a>
-                </nav>
-            </div>
-        </header>
-        <div class="mdl-layout__drawer">
-            <span class="mdl-layout-title">Blog UTTC</span>
-            <nav class="mdl-navigation">
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">home</i> Ir al inicio
-                </a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">post_add</i>
-                    Ver publicaciones</a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">photo_camera</i> Imágenes</a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">video_library</i> Videos</a>
-                <a class="mdl-navigation__link mdl-color-text--primary" href="">
-                    <i class="material-icons">audio_file</i> Audios</a>
-                <div class="mdl-navigation__link app--install" id="banner-install">
-                    <div>
-                        Si te gustó la app puedes instalarla en tu dispositivo presionando
-                        en el botón instalar
-                    </div>
-                    <div><i class="material-icons">app_settings_alt</i>Instalar</div>
-                </div>
-                <div class="mdl-navigation__link notifications--install" id="notifications--install">
-                    <div>¿Desea Activar las Notificaciones?</div>
-                    <div>
-                        <i class="material-icons">notification_important</i>Activar
-                    </div>
-                </div>
-            </nav>
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <!-- Title -->
+          <span class="mdl-layout-title">Blog UTTC</span>
+          <!-- Add spacer, to align navigation to the right -->
+          <div class="mdl-layout-spacer"></div>
+          <!-- Navigation. We hide it in small screens. -->
+          <nav class="mdl-navigation mdl-layout--large-screen-only">
+            <li>Home</li>
+            <a class="mdl-navigation__link" href="">Ver publicaciones</a>
+            <a class="mdl-navigation__link" href="">Imágenes</a>
+            <a class="mdl-navigation__link" href="">Videos</a>
+            <a class="mdl-navigation__link" href="">Audios</a>
+          </nav>
         </div>
-        <main class="mdl-layout__content">
-            <div class="page-content">
-                <div id="main">
-                    <div>
-                        <div class="card-wide mdl-card page-index">
-                            <div class="svg--container">
-                                <div></div>
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-                                    <path fill="#f57c00" fill-opacity="1"
-                                        d="M0,256L40,240C80,224,160,192,240,197.3C320,203,400,245,480,229.3C560,213,640,139,720,117.3C800,96,880,128,960,170.7C1040,213,1120,267,1200,288C1280,309,1360,299,1400,293.3L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z">
-                                    </path>
-                                </svg>
-                            </div>
-                            <div class="page--initial">
-                                <i class="material-icons">emoji_objects</i>
-                                <div class="description">
-                                    Si no quieres olvidarte de una idea, mensaje, palabra,
-                                    etc... publicala y hazlo persistente.
-                                </div>
-                            </div>
-                            <div class="page--initial">
-                                <i class="material-icons">add_a_photo</i>
-                                <div class="description">
-                                    Si no quieres perder fotos que tomaste de lugares, personas
-                                    y eventos que te gustaron, publicala para que no se pierda.
-                                </div>
-                            </div>
-                            <div class="page--initial">
-                                <i class="material-icons">ondemand_video</i>
-                                <div class="description">
-                                    Si no quieres escribir y solo deseas grabar un video o un
-                                    audio, tambien puedes hacerlo y volverlo un recuerdo para
-                                    siempre.
-                                </div>
-                            </div>
-                        </div>
+      </header>
+      <div class="mdl-layout__drawer">
+        <span class="mdl-layout-title">Blog UTTC</span>
+        <nav class="mdl-navigation">
+          <a class="mdl-navigation__link mdl-color-text--primary" href="">
+            <i class="material-icons">home</i> Ir al inicio
+          </a>
+          <a class="mdl-navigation__link mdl-color-text--primary" href="">
+            <i class="material-icons">post_add</i>
+            Ver publicaciones</a
+          >
+          <a class="mdl-navigation__link mdl-color-text--primary" href="">
+            <i class="material-icons">photo_camera</i> Imágenes</a
+          >
+          <a class="mdl-navigation__link mdl-color-text--primary" href="">
+            <i class="material-icons">video_library</i> Videos</a
+          >
+          <a class="mdl-navigation__link mdl-color-text--primary" href="">
+            <i class="material-icons">audio_file</i> Audios</a
+          >
+          <div class="mdl-navigation__link app--install" id="banner-install">
+            <div>
+              Si te gustó la app puedes instalarla en tu dispositivo presionando
+              en el botón instalar
+            </div>
+            <div><i class="material-icons">app_settings_alt</i>Instalar</div>
+          </div>
+          <div
+            class="mdl-navigation__link notifications--install"
+            id="notifications--install"
+          >
+            <div>¿Desea Activar las Notificaciones?</div>
+            <div>
+              <i class="material-icons">notification_important</i>Activar
+            </div>
+          </div>
+        </nav>
+      </div>
+      <main class="mdl-layout__content">
+        <div class="page-content">
+          <div id="main">
+            <div>
+              <div class="card-wide mdl-card page-index">
+                <div class="svg--container">
+                  <div></div>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 1440 320"
+                  >
+                    <path
+                      fill="#f57c00"
+                      fill-opacity="1"
+                      d="M0,256L40,240C80,224,160,192,240,197.3C320,203,400,245,480,229.3C560,213,640,139,720,117.3C800,96,880,128,960,170.7C1040,213,1120,267,1200,288C1280,309,1360,299,1400,293.3L1440,288L1440,320L1400,320C1360,320,1280,320,1200,320C1120,320,1040,320,960,320C880,320,800,320,720,320C640,320,560,320,480,320C400,320,320,320,240,320C160,320,80,320,40,320L0,320Z"
+                    ></path>
+                  </svg>
+                </div>
+                <div class="page--initial">
+                  <i class="material-icons">emoji_objects</i>
+                  <div class="description">
+                    Si no quieres olvidarte de una idea, mensaje, palabra,
+                    etc... publicala y hazlo persistente.
+                  </div>
+                </div>
+                <div class="page--initial">
+                  <i class="material-icons">add_a_photo</i>
+                  <div class="description">
+                    Si no quieres perder fotos que tomaste de lugares, personas
+                    y eventos que te gustaron, publicala para que no se pierda.
+                  </div>
+                </div>
+                <div class="page--initial">
+                  <i class="material-icons">ondemand_video</i>
+                  <div class="description">
+                    Si no quieres escribir y solo deseas grabar un video o un
+                    audio, tambien puedes hacerlo y volverlo un recuerdo para
+                    siempre.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--boton add-->
+        <div class="floating-button">
+          <button
+            class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored"
+            id="btn-upload-post"
+          >
+            <i class="material-icons">add</i>
+          </button>
+        </div>
+        <!--end boton add-->
+
+        <!--Sección para agregar un post-->
+        <div class="card-wide mdl-card mdl-shadow--2dp" id="modal-post-section">
+          <div class="mdl-card__supporting-text">
+            <form action="#">
+              <div class="mdl-grid">
+                <div
+                  class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                >
+                  <input class="mdl-textfield__input" type="text" id="title" />
+                  <label class="mdl-textfield__label" for="title">Titulo</label>
+                </div>
+
+                <div
+                  class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label"
+                >
+                  <textarea
+                    class="mdl-textfield__input"
+                    type="text"
+                    rows="3"
+                    id="descripcion"
+                  ></textarea>
+                  <label class="mdl-textfield__label" for="descripcion"
+                    >Descripcion</label
+                  >
+                </div>
+
+                <div class="mdl-grid mdl-cell mdl-cell--12-col">
+                  <div class="mdl-grid">
+                    <div class="mdl-cell mdl-cell--6-col">
+                      <button
+                        type="button"
+                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--primary"
+                        id="btn-post-submit"
+                      >
+                        Enviar post
+                      </button>
                     </div>
+                    <div class="mdl-cell mdl-cell--6-col">
+                      <button
+                        type="button"
+                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--error"
+                        id="btn-post-cancel"
+                      >
+                        Cancelar
+                      </button>
+                    </div>
+                  </div>
                 </div>
-            </div>
-            <!--boton add-->
-            <div class="floating-button">
-                <button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored" id="btn-upload-post">
-                    <i class="material-icons">add</i>
-                </button>
-            </div>
-            <!--end boton add-->
-            <!--Intalar la aplicacion-->
-            <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--primary" id="btn-install-app">
-                Instalar aplicación
-            </button>
-            <!--Sección para agregar un post-->
-            <div class="card-wide mdl-card mdl-shadow--2dp" id="modal-post-section">
-                <div class="mdl-card__supporting-text">
-                    <form action="#">
-                        <div class="mdl-grid">
-                            <div
-                                class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" type="text" id="title" />
-                                <label class="mdl-textfield__label" for="title">Titulo</label>
-                            </div>
-
-                            <div
-                                class="mdl-cell mdl-cell--12-col mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <textarea class="mdl-textfield__input" type="text" rows="3" id="descripcion"></textarea>
-                                <label class="mdl-textfield__label" for="descripcion">Descripcion</label>
-                            </div>
-
-                            <div class="mdl-grid mdl-cell mdl-cell--12-col">
-                                <div class="mdl-grid">
-                                    <div class="mdl-cell mdl-cell--6-col">
-                                        <button type="button"
-                                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--primary"
-                                            id="btn-post-submit">
-                                            Enviar post
-                                        </button>
-                                    </div>
-                                    <div class="mdl-cell mdl-cell--6-col">
-                                        <button type="button"
-                                            class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent mdl-color-text--white mdl-color--error"
-                                            id="btn-post-cancel">
-                                            Cancelar
-                                        </button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-            </div>
-            <!--Termina sección para agregar un post-->
-        </main>
+              </div>
+            </form>
+          </div>
+        </div>
+        <!--Termina sección para agregar un post-->
+      </main>
     </div>
     <script src="src/js/app.js"></script>
-</body>
-
+  </body>
 </html>
